# python-mastery

./: .pre-commit-config.yaml  LICENSE.md  README.md  art.py  cta.py  data_analysis.py  mutint.py  pcost.py  pyproject.toml  reader.py  readport.py  readrides.py  requirements.txt  review.txt  setup.cfg  stock.py  test_1.py  test_2.py
.devcontainer/: devcontainer.json
Data/: dowstocks.csv  missing.csv  portfolio.csv  portfolio2.csv  portfolio3.csv  portfolio_noheader.csv  prices.csv  stocksim.py  words.txt
Exercises/: README.md  ex1_1.md  ex1_2.md  ex1_3.md  ex1_4.md  ex1_5.md  ex1_6.md  ex2_1.md  ex2_2.md  ex2_3.md  ex2_4.md  ex2_5.md  ex2_6.md  ex3_1.md  ex3_2.md  ex3_3.md  ex3_4.md  ex3_5.md  ex3_6.md  ex3_7.md  ex3_8.md  ex4_1.md  ex4_2.md  ex4_3.md  ex4_4.md  ex5_1.md  ex5_2.md  ex5_3.md  ex5_4.md  ex5_5.md  ex5_6.md  ex6_1.md  ex6_2.md  ex6_3.md  ex6_4.md  ex6_5.md  ex7_1.md  ex7_2.md  ex7_3.md  ex7_4.md  (+64 more)
Exercises/1_1/: art.py  soln1_1.md
MyPractice/: Stock.py  art.py  dictionary.py  lists.py  numbers.py  pcost.py  string-manipulations.py
MySolutions/1_1/: art.py
MySolutions/2-1/: memory_comparison.py
Solutions/: README.md
Solutions/1_1/: art.py
Solutions/1_3/: pcost.py
Solutions/1_4/: pcost.py
Solutions/1_5/: stock.py
Solutions/1_6/: pcost.py
Solutions/2_1/: readrides.py
Solutions/2_2/: cta.py  readport.py  readrides.py
Solutions/2_4/: mutint.py
Solutions/2_5/: cta.py  readrides.py
Solutions/2_6/: colreader.py  cta.py  reader.py
Solutions/3_1/: stock.py
Solutions/3_2/: stock.py  tableformat.py
Solutions/3_3/: reader.py  stock.py  tableformat.py
Solutions/3_4/: stock.py
Solutions/3_5/: reader.py  stock.py  tableformat.py
Solutions/3_6/: stock.py  tableformat.py
Solutions/3_7/: reader.py  tableformat.py
Solutions/3_8/: reader.py  stock.py  tableformat.py
Solutions/4_2/: validate.py
Solutions/4_3/: validate.py
Solutions/5_2/: reader.py  stock.py
Solutions/5_3/: reader.py  stock.py
Solutions/5_5/: reader.py
workings/: art.py  pcost.py  readrides.py
(+77 files in other folders)
