[tool.poetry]
name = "python-mastery"
version = "0.1.0"
description = ""
authors = ["hstephens <stephens.j.hunter@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
loguru = "^0.7.0"
plotly = "^5.15.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
