[tool.poetry]
name = "python-mastery"
version = "0.1.0"
description = ""
authors = ["hstephens <stephens.j.hunter@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
loguru = "^0.7.0"
plotly = "^5.15.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"
pre-commit = "^3.3.3"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[tool.ruff]
# Never enforce `E501` (line length violations).
# Never enforce 'E722' (Bare Except).
# Never Enforce 'F401' (Imported but Unused)
# Never Enforce 'E402' (Module Level Import at top of file).
# Never Enforce 'F403' (Unable to detect undefined names).
# Never Enforce 'F405' (Undefined Star Imports)
# Never Enforce 'F811' (Redefinition of unused variable)
# Never Enforce 'F821' (Undefined name)

ignore = ["E501", "E722", "F401", "E402", "F403", "F405", "F811", "F821"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
